now creates substrings of correct size and position, still not fixed the issue where the ciphered ones get jumbled up

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,7 +27,10 @@ add_subdirectory(Documentation)
 enable_testing()
 add_subdirectory(Testing)
 
+# Find the Threads package
+find_package(Threads)
+
 # - Declare the build of mpags-cipher main program
 #   and link it to the MPAGSCipher library
 add_executable(mpags-cipher mpags-cipher.cpp)
-target_link_libraries(mpags-cipher PRIVATE MPAGSCipher)
+target_link_libraries(mpags-cipher PRIVATE MPAGSCipher Threads::Threads)
